--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -90,16 +90,13 @@
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         <button class="btn-login" type="submit">SE CONNECTER</button>
     </form>
-
     <div class="extra-links">
         <a href="{{ path('app_register') }}">Pas encore enrôlé ?</a>
     </div>
 </div>
-{% endblock %}
-
-{% block javascripts %}
-{{ parent() }}
 <script>
+console.log('Login script loaded');
+
 document.getElementById('loginForm').addEventListener('submit', async (e) => {
     e.preventDefault();
 
@@ -123,6 +120,11 @@ document.getElementById('loginForm').addEventListener('submit', async (e) => {
     }
 });
 </script>
+{% endblock %}
+
+{% block javascripts %}
+{{ parent() }}
+
 {% endblock %}
 
 {% block footer %}
