--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Enrôlement – Team Rocket & Co{% endblock %}
+{% block navigation %}
+  <nav class="mini-nav">
+    <a href="{{ path('app_home') }}">Retour</a>
+  </nav>
+{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -121,10 +126,6 @@
 
     {{ form_end(registrationForm) }}
 </div>
-{% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
 
     <script defer>
         /* Attendre le DOM + sécuriser l’existence du champ */
@@ -153,6 +154,11 @@
             updateTeamDisplay(select.value); // initial
         });
     </script>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+
 {% endblock %}
 
 {% block footer %}{% endblock %}
