--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Connexion – Team Rocket & Co{% endblock %}
+{% block navigation %}
+  <nav class="mini-nav">
+    <a href="{{ path('app_home') }}">Retour</a>
+  </nav>
+{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -95,8 +100,6 @@
     </div>
 </div>
 <script>
-console.log('Login script loaded');
-
 document.getElementById('loginForm').addEventListener('submit', async (e) => {
     e.preventDefault();
 
